--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "ng test",
     "json-server": "node server.js",
     "setup-json-server-database": "node setup-server.js",
+    "install-dependencies": "npm install --force",
     "postinstall": "npm run setup-json-server-database"
   },
   "private": true,
@@ -25,7 +26,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "countries-list": "^3.1.0",
-    "flag-icons": "^7.2.3",
+    "country-flag-icons": "^1.5.11",
     "json-server": "^0.17.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
